--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "autoprefixer": "^10.2.4",
     "next": "10.0.7",
     "next-images": "^1.7.0",
     "postcss": "^8.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.3"
+    "sharp": "^0.27.2",
+    "tailwindcss": "^2.0.3",
+    "validator": "^13.5.2"
   }
 }
