--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-images": "^1.7.0",
     "postcss": "^8.2.6",
     "react": "17.0.1",
+    "react-calendar": "^3.3.1",
     "react-dom": "17.0.1",
     "sharp": "^0.27.2",
     "tailwindcss": "^2.0.3",
