--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-calendar": "^3.3.1",
     "react-dom": "17.0.1",
+    "react-select": "^4.1.0",
     "sharp": "^0.27.2",
     "tailwindcss": "^2.0.3",
     "validator": "^13.5.2"
