--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.2.4",
     "next": "10.0.7",
     "next-images": "^1.7.0",
