--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@prisma/client": "^2.18.0",
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.2.4",
+    "axios": "^0.21.1",
     "next": "10.0.7",
     "next-images": "^1.7.0",
     "postcss": "^8.2.6",
@@ -21,7 +23,11 @@
     "react-dom": "17.0.1",
     "react-select": "^4.1.0",
     "sharp": "^0.27.2",
+    "swr": "^0.4.2",
     "tailwindcss": "^2.0.3",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "prisma": "^2.18.0"
   }
 }
