--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@prisma/cli": "^2.0.0-alpha.1314",
     "@prisma/client": "^2.18.0",
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.2.4",
